--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 L’entreprise UPB-SOABE a été créé en 2017 et formalisée en 2020 au 
                 registre du commerce du Togo sous le N° RCCM : TG-LFW-01-2020-B12-02991, 
-                NIF 1001703074, N*CNSS 128311 sous le régime fiscal réel sans TVA. 
+                NIF 1001703074, N° CNSS 128311 sous le régime fiscal réel sans TVA. 
                 Elle intervient dans le domaine du pastoral plus précisément dans le 
                 secteur de l’élevage bovin. Elle a principalement 2 axes d’activité à savoir 
                 l’élevage et l’engraissement (c'est-à-dire nous achetons et nous engraissons 
@@ -144,7 +144,7 @@
                 été dépensé pour l’importation de viande. Les importations d’animaux sur pied, en viande et abats se sont
                  élevées à 4,7 milliards de FCFA en 2010 et 5, 5 milliards de FCFA en 2011 et estimées à environ 6,5 milliards 
                  de FCFA en 2012.
-               Aujourd’hui le gouvernement togolais mise aujourd’hui énormément sur les acteurs locaux pour palier à ce déficit.
+               Aujourd’hui le gouvernement togolais mise énormément sur les acteurs locaux pour palier à ce déficit.
                 C’est la raison principale de la création de l’entreprise <strong> UPB SOABE SARL (UNITE DE PRODUCTION DE BETAIL SOABE)</strong>.
                </p>
             
@@ -223,7 +223,7 @@
 
         <div class="footer-section">
             <h3>Contact</h3>
-            <p>📍 Siège socia : ADETICOPE – TOGO </p>
+            <p>📍 Siège social : ADETICOPE – TOGO </p>
             <p>📞 Téléphone : <a href="tel: XX XX XX XX"> +228 98 10 12 68 / 92 41 78 10</a></p>
             <p>📧 Email : <a href="upbsoabesarl@gmail.com ">upbsoabesarl@gmail.com </a></p>
         </div>
