--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <h1>Contactez-nous</h1>
         <p>Vous avez une plainte ou un avis ? Remplissez le formulaire ci-dessous, nous vous répondrons rapidement.</p>
 
-        <form action="https://formspree.io/f/xaneygel" method="POST">
+        <form action="https://formspree.io/f/manojgnp" method="POST">
             <label for="name">Nom :</label>
             <input type="text" id="name" name="name" required>
 
