--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 par la vision de deux (02) personnes à savoir M. BAMOK Issa et Mme BOUAMEKPO Ablavi Akpene
               ce choix a été motivé par le désir de poser les premières fondations.
                Depuis la création de l’entreprise M. BAMOK est le Directeur Général et 
-               Mme BOUAMEKPO Ablavi Akpene est la directrice administrative et financière. </p>
+               Mme BOUAMEKPO Ablavi Akpénè est la directrice administrative et financière. </p>
                 <p>Toute fois comme toute entreprise ambitieuse et soucieuse de l’avenir nous somme ouvert
                      et prêt à recevoir des partenaires ayant les mêmes ambitions que nous. </p>
             
