--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="about-content">
             <h2>LES PROMOTEURS</h2>
             <p><strong>UPB SOABE</strong> est une société anonyme à responsabilité limitée portée 
-                par la vision de deux (02) personnes à savoir M. BAMOK Issa et Mme BOUAMEKPO Ablavi Akpene
+                par la vision de deux (02) personnes à savoir M. BAMOK Issa et Mme BOUAMEKPO Ablavi Akpénè
               ce choix a été motivé par le désir de poser les premières fondations.
                Depuis la création de l’entreprise M. BAMOK est le Directeur Général et 
                Mme BOUAMEKPO Ablavi Akpénè est la directrice administrative et financière. </p>
